[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sounds.gd" type="Script" id=1]
[ext_resource path="res://sounds/destroy_14.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/destroy_12.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/destroy_13.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/destroy_1.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/destroy_2.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/destroy_3.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/destroy_4.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/destroy_5.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/destroy_6.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/destroy_7.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/destroy_8.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/destroy_9.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/destroy_10.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/destroy_11.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/ui_click.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/ui_click_2.wav" type="AudioStream" id=17]
[ext_resource path="res://SFXRand.gd" type="Script" id=18]

[node name="Sounds" type="Node"]
pause_mode = 2
script = ExtResource( 1 )

[node name="Destroy1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Destroy2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"

[node name="Destroy3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
bus = "SFX"

[node name="Destroy4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Destroy5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[node name="Destroy6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
bus = "SFX"

[node name="Destroy7" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "SFX"

[node name="Destroy8" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "SFX"

[node name="Destroy9" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
bus = "SFX"

[node name="Destroy10" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "SFX"

[node name="Destroy11" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
bus = "SFX"

[node name="Destroy12" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "SFX"

[node name="Destroy13" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Destroy14" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "SFX"

[node name="UIClick1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -6.0
bus = "SFX"
script = ExtResource( 18 )

[node name="UIClick2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
bus = "SFX"
script = ExtResource( 18 )
